# FastRouter-example

./: .gitignore  README.md  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 22c845279dbd_initial_migration.py
app/: dependencies.py
app/core/: config.py  database.py  security.py
app/models/: todo.py  user.py
app/routes/auth/: callback.py  login.py  logout.py
app/routes/todos/: index.py
app/routes/todos/[id]/: edit.py  index.py
app/templates/: index.html  layout.html  todo.html  todo_edit.html
static/: style.css
